# synext

./: Cargo.toml  README.md  _typos.toml  deny.toml  publish.cmd  publish.sh  tester.cmd  tester.sh
.github/workflows/: rust.yml
src/: lib.rs  syntax.rs
src/syntax/: attr.rs  derive.rs
src/syntax/attr/: parser.rs
src/syntax/derive/: parser.rs
